ENT-6914 - fixed deployNodes failures